# AKETER-batch

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  fix_mysql_user.sql  pyproject.toml  requirements.txt  run_batch.py  test_db_connection.py  test_password.py  use_cloud_sql_proxy.md  works.md
app/: config.py  database.py  main.py
app/batch/: scheduler.py
app/batch/clustering/: __init__.py  clusterer.py  preprocessor.py  representative_selector.py
app/batch/matching/: __init__.py  collaborative_filter.py  item_embedder.py  persona_embedder.py
app/batch/tasks/: __init__.py  persona_clustering_task.py
app/cli/: __main__.py  batch_commands.py
app/models/: __init__.py  base.py  item.py  item_feature.py  persona.py  persona_item.py  persona_representative_feature.py  user.py  user_feature.py  user_item_interaction.py
app/utils/: chroma_client.py  embedding_client.py  llm_client.py  logging_config.py
